# data_analysis_mcp

./: .env.example  .gitignore  README.md  pyproject.toml  test_service.py
data_analysis_mcp/: __init__.py  app.py
data_analysis_mcp/config/: config.py
data_analysis_mcp/services/: __init__.py  data_analysis.py
data_analysis_mcp/utils/: logger.py
