[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_analysis_mcp"
version = "0.1.8"
description = "数据分析MCP服务"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    {name = "Data Analysis Team", email = "example@example.com"},
]
dependencies = [
    "mcp>=0.1.0",
    "aiohttp>=3.8.1",
    "requests>=2.27.1",
    "python-dotenv>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.1.0",
    "isort>=5.10.1",
    "flake8>=4.0.1",
]

[project.scripts]
data-analysis-mcp = "data_analysis_mcp.app:main"

[tool.setuptools]
packages = ["data_analysis_mcp"] 

